--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.7.0'
 
     // Dependencies for Roboelecttic
     testImplementation 'org.robolectric:robolectric:3.6.1'
@@ -68,6 +69,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.0.2'
     testImplementation 'junit:junit:4.12'
+
+    androidTestCompile 'com.squareup.retrofit2:retrofit-mock:2.0.0'
+    androidTestCompile ('com.squareup.okhttp:mockwebserver:2.7.0')
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:3.0.1'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
 }
